[package]
name = "tui-md"
version = "0.1.0"
edition = "2024"
description = "A portable TUI markdown viewer for ratatui"
license = "MIT"

[dependencies]
ratatui = "0.29"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy", "parsing", "html"] }
